k8s/01-docs-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: respeer-docs-webui
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: respeer-docs-webui
  template:
    metadata:
      labels:
        app: respeer-docs-webui
    spec:
      containers:
        - name: respeer-docs-webui
          image: npool/respeer-docs-webui:latest
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: respeer-docs-webui
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 3000
      targetPort: 3000
  selector:
    app: respeer-docs-webui
